--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter</h3>
                 <div class="input-group news-input">
                     <input type="text" class="form-control" placeholder="Enter Email"/> <button
-                        class="btn btn-dark btn-lg" type="button">Button</button>
+                        class="btn btn-dark btn-lg" type="button">Subscribe</button>
                 </div>
             </div>
         </div>
